# destripe

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
docs/superpowers/plans/: 2026-04-11-refactor-destripe.md
docs/superpowers/specs/: 2026-04-11-refactor-destripe-design.md
notebooks/: test.ipynb
src/destripe/: __init__.py  core.py  ops.py
tests/: test_core.py
