[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "destripe"
version = "0.1.2"
description = "PDHG-based universal stripe-noise removal for images, backed by PyTorch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "kn", email = "phykn.kr@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["destripe", "stripe-removal", "image-processing", "denoising"]
dependencies = [
    "numpy",
    "torch",
]

[project.urls]
Homepage = "https://github.com/phykn/destripe"
Repository = "https://github.com/phykn/destripe"

[tool.hatch.build.targets.wheel]
packages = ["src/destripe"]
